# ttr

./: Pretty.hs  TT.hs  TypeChecker.hs  stack.yaml  ttr.cabal
