cabal-version:      >=1.10
name:               ttr
version:            0.1.0
license:            GPL
license-file:       LICENSE
maintainer:         jean-philippe.bernardy@gu.se
author:             Jean-Philippe Bernardy
homepage:           https://github.com/jyp/ttr
synopsis:           Implementation of a type
category:           Dependent Types
build-type:         Custom
extra-source-files: Exp.cf

custom-setup
  setup-depends: base, Cabal, directory, process
                      
executable ttr
    main-is:          Main.hs
    build-tools:      alex -any, happy -any
    hs-source-dirs:   .
    other-modules:
        Exp.Lex
        Exp.Par
        TT
        Concrete
        Eval
        Pretty
        TypeChecker
        Loader
        Exp.Abs
        Exp.ErrM
        
    default-language: Haskell2010
    other-extensions:
        TupleSections ParallelListComp CPP MagicHash
        GeneralizedNewtypeDeriving

    build-depends:
        base >=4.10 && <5,
        transformers >=0.3,
        mtl >=2.1,
        haskeline >=0.7,
        directory >=1.2,
        array >=0.4,
        BNFC >=2.5,
        filepath >=1.3,
        pretty-compact,
        containers,
        gasp
